// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls onSearchTerm on the NavBar 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
  <SnackBar
    class="danger-snackbar"
    message="Please Login"
  />
</div>
`;

exports[`calls onSearchTermChange 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
</div>
`;

exports[`calls onSearchTermChange for items 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
</div>
`;

exports[`calls showModal and clearMessages on the Modal 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
  <Modal
    clearMessages={[Function]}
    create={true}
    owner="add_shopping_list"
    showModal={[Function]}
    title="Create Shopping List"
  />
  <SnackBar
    class="danger-snackbar"
    message="Please Login"
  />
</div>
`;

exports[`handles authorization 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
  <SnackBar
    class="danger-snackbar"
    message="Please Login"
  />
</div>
`;

exports[`handles empty lists 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
  <SnackBar
    class="danger-snackbar"
    message="Please Login"
  />
</div>
`;

exports[`renders shopping lists 1`] = `
<div>
  <NavBar
    authorized={true}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    >
      <ShoppingList
        clearMessages={[Function]}
        id={1}
        key="1"
        title="Groceries"
      />
      <ShoppingList
        clearMessages={[Function]}
        id={2}
        key="2"
        title="Food"
      />
    </div>
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
</div>
`;

exports[`renders the home_page component 1`] = `
<div>
  <NavBar
    authorized={false}
    logged_in="true"
    onSearchTermChange={[Function]}
    page="home"
    username={null}
  />
  <div
    className="wrapper"
  >
    <div
      className="home-wrapper"
    />
  </div>
  <a
    className="btn-fab round-button"
    href=""
    onClick={[Function]}
  >
    <i
      className="fab-icon fa-plus"
    />
  </a>
  <Pagination
    initialPage={1}
    items={Array []}
    onChangePage={[Function]}
    total_items={0}
  />
</div>
`;
